--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -1,54 +1,97 @@
-h1 {
-    position: relative;
-    height: 117.55px;
-    width: 1023.65px;
-    margin-right: 49.35px;
-    margin-left: 62.46px;
-    margin-bottom: 3%;
-    margin-top: 73.45px; 
-    float: right;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-color:#373867;
-    font-family: 'Roboto';
-    font-size: 70px; 
-    font-weight: bold;
-    color:#373867;  
-    
+h1  { 
+  position: relative;
+  height: 117.55px;
+  width: 1023.65px;
+  margin-right: 49.35px;
+  margin-left: 62.46px;
+  margin-bottom: 3%;
+  margin-top: 73.45px; 
+  float: right;
+  border-bottom-style: solid;
+  border-width: 3px;
+  border-color:#373867;
+  font-family: 'Roboto';
+  font-size: 70px; 
+  font-weight: bold;
+  color:#373867;  
 }
 
-header {
-        position: relative; 
-        float: right;
-        border: 1px solid black;
-        width: 80%;
+header  {
+  position: relative; 
+  float: right;
+  border: 1px solid black;
+  width: 80%;
 }
 
 nav {
-    position: relative;
-    padding-top: 35.22px;
-    float: left;
-    border: 1px solid black;
-    width: 19%;
-    height: 100%;
-    background-color: #B1B2B6;
+  position: relative;
+  padding-top: 35.22px;
+  padding-left: 30px;
+  padding-right: 30px;
+  float: left;
+  border: 1px solid black;
+  width: 15%;
+  height: 100%;
+  background-color: #B1B2B6;
 }
 
-footer {
-        position: relative;
-        float: right;
-        width: 80%;
+footer  {
+  position: relative;
+  float: right;
+  width: 80%;
+}
+
+a {
+  text-decoration: none;
 }
 
 .main {
-        position: relative;
-        float: right;
-        width: 80%;
-        border: 1px solid black;
-
+  position: relative;
+  float: right;
+  width: 80%;
+  border: 1px solid black;
 }
 
-.image {
-    width: 515px;
-    height: 315px;
+.image  {
+  width: 515px;
+  height: 315px;
+}
+
+.container-search {
+  width: 100px;
+  position: relative;
+}
+
+.container-search input#search  {
+  width: 200px;
+  height: 25px;
+  font-size: 10pt;
+  float: left;
+  padding-left: 5px;
+  border: none;
+  border-radius: 3px;
+  }
+
+.container-search .icon  {
+  position: absolute;
+  top: 50%;
+  margin-left: -30px;
+  margin-top: 5px;
+  color: #4f5b66;
+}
+
+.container-search button  {
+  border: 0px;
+  background-color: white;
+}
+.buttons-account  {
+  width: 91.96px;
+  height: 34.99px;
+  margin-top: 27.73px;
+  border-radius: 11.24px;
+  border: none;
+}
+
+.log-in {
+
 }
