--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -115,15 +115,14 @@ a {
   font-weight: 400;
   color: #373867;
 }
-footer  {
-  position: relative;
-  float: right;
-  width: 80%;
-}
 .main {
   position: relative;
   float: right;
   width: 80%;
+  border: 1px solid black;
+}
+.info-contain {
+  margin-bottom: 100px;
   border: 1px solid black;
 }
 .title  {
@@ -139,12 +138,14 @@ footer  {
   font-size: 16px;
   text-align: justify;
   font-style: normal;
+  line-height: 22px;
   color: #373867CC;
 }
 .info-left  {
   position: relative;
-  padding: 2%;
-  width: 48%;
+  margin-left: 60px;
+  margin-right: 40px;
+  width: 35%;
   float: left;
 }
 .image  {
@@ -155,7 +156,10 @@ footer  {
 }
 .image .first-image  {
   position: relative;
-  width: 48%;
+  width: 63%;
+  margin-right: 80px;
+  margin-left: 40px;
+  margin-top: 11px;
   float: right;
 }
 .size-image-one {
@@ -180,6 +184,26 @@ footer  {
   position: relative;
   width: 100%;
   align-items: center;
+  border: 1px solid black;
 }
-
-
+#contact-us {
+  margin-top: 2%;
+}
+footer  {
+  position: relative;
+  float: right;
+  width: 80%;
+}
+#first-learn-button {
+  width: 82px;
+  height: 26px;
+  margin-top: 13px;
+  border: none;
+  border-radius: 4px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 9px;
+  color: #373867;
+  background-color:#AACE9B;
+}
