--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -121,6 +121,9 @@ a {
   width: 80%;
   border: 1px solid black;
 }
+.first-contain  {
+  margin-bottom: 125px;
+}
 .info-contain {
   margin-bottom: 100px;
   border: 1px solid black;
@@ -156,11 +159,12 @@ a {
 }
 .image .first-image  {
   position: relative;
-  width: 63%;
+  width: 48%;
   margin-right: 80px;
-  margin-left: 40px;
+  margin-left: 30px;
   margin-top: 11px;
   float: right;
+  border: 1px black solid;
 }
 .size-image-one {
   width: 513.39px;
@@ -169,16 +173,35 @@ a {
 .info-right  {
   position: relative;
   width: 48%;
+  margin-right: 65px;
   float: right;
+  border: 1px black solid;
 }
-.image .second-image {
+.second-image {
   position: relative;
-  width: 48%;
-  float: left;
+  width: 40%;
+  margin-right: 80px;
+  margin-left: 40px;
+  margin-top: 79px;
 }
+
 .size-image-two {
-  width: 434.71px;
-  height: 215.78px;
+  width: 400px;
+  height: 200px;
+}
+
+#first-learn-button {
+  width: 82px;
+  height: 26px;
+  margin-top: 13px;
+  border: none;
+  border-radius: 4px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 9px;
+  color: #373867;
+  background-color:#AACE9B;
 }
 .features-content {
   position: relative;
@@ -193,17 +216,4 @@ footer  {
   position: relative;
   float: right;
   width: 80%;
-}
-#first-learn-button {
-  width: 82px;
-  height: 26px;
-  margin-top: 13px;
-  border: none;
-  border-radius: 4px;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 9px;
-  color: #373867;
-  background-color:#AACE9B;
 }
