--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -1,7 +1,6 @@
 header  {
   position: relative; 
   float: right;
-  border: 1px solid black;
   width: 80%;
 }
 h1  { 
@@ -22,15 +21,16 @@ h1  {
   color:#373867;  
 }
 nav {
-  position: relative;
+  position: fixed;
   width: 15%;
+  height: 100%;
+  margin-right: 0px;
   align-items: stretch;
   padding-bottom: 10%;
   padding-top: 35.22px;
   padding-left: 30px;
   padding-right: 30px;
   float: left;
-  border: 1px solid black;
   background-color: #B1B2B6; 
   opacity: 0.9;
 }
@@ -105,7 +105,7 @@ a {
   color: #373867;
 }
 .get-in-touch {
-  margin-top: 270.55px;
+  margin-top: 200px;
 }
 .more-data li{
   margin-top: 12px;
@@ -119,14 +119,12 @@ a {
   position: relative;
   float: right;
   width: 80%;
-  border: 1px solid black;
 }
 .first-contain  {
   margin-bottom: 125px;
 }
 .info-contain {
   margin-bottom: 100px;
-  border: 1px solid black;
 }
 .title  {
   font-family: 'Roboto';
@@ -165,7 +163,6 @@ a {
   margin-left: 30px;
   margin-top: 11px;
   float: right;
-  border: 1px black solid;
 }
 .size-image-one {
   width: 513.39px;
@@ -314,6 +311,9 @@ a {
 #contact-us {
   width: 100%;
 }
+.contact-form {
+  margin-left: 60px;
+}
 label {
   margin-top: 50px;
   font-family:'Roboto';
@@ -324,7 +324,6 @@ label {
 }
 label,input,textarea,select {
   display: block;
-  margin-left: 60px;
 }
 #name, #email, #option, #message  {
   height: 37px;
@@ -348,6 +347,7 @@ label,input,textarea,select {
   width: 200px;
   margin-top: 34px;
   margin-bottom:85px;
+  margin-right: 30px;
   float: left;
   border: none;
   border-radius:5px;
@@ -378,7 +378,63 @@ footer  {
   position: relative;
   float: right;
   width: 80%;
+  margin-left:0;
+}
+.first-footer-part{
+  background-color: #373867CC;
+  height: 300px; 
+  margin-left: 0; 
+}
+.footer-title {
+  margin-left: 100px;
+  padding-top: 62px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 29.9792px;
+  color: #FFFFFF;
+  text-align: left;
+}
+.footer-list-one {
+  position: relative;
+  float: right;
+  width: 20%;
+  padding-top: 5px;
+  padding-left: 20px;
+}
+.footer-list-one h4{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  color: #FFFFFF;
+}
+.footer-list-one ol{
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.footer-list-one ol li{
+  list-style: decimal;
+  color: #FFFFFF;
+}
+.footer-list-one ol li a{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #FFFFFF;
 }
 
+#social-media{
+  width: 50%;
+  padding-top: 20px;
+  padding-left: 450px;
+  padding-bottom: 65px;
+}
 
-
+#social-media button{
+  border: 0px;
+  background-color: #FFFFFF;
+}
