BaSP-W04-2022: More changes in the HTML structure and styles in the main content

--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -41,7 +41,7 @@ a  {
   position: relative;
   width: 100px;
 }
-.container-search input#search  {
+.container-search input .search  {
   width: 200px;
   height: 25px;
   padding-left: 5px;
