--- a/Semana-04/css/header.css
+++ b/Semana-04/css/header.css
@@ -1,14 +1,6 @@
-header{
+header {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    
-}
-
-h1 {
-    font-weight: bold;
-    color: #373867;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-color:#373867;
+    align-content: center;
+    border: 1px black solid;
 }
