BaSP-W04-2022: Styles in the paragraphs were made

--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -1,4 +1,12 @@
+
+.info-contain {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .info-contain h2 {
     color: #49A37B;
-
+    font-size: 30px;
+    font-weight: 700;
 }
