BaSP-W04-2022: More changes in sizes with flex

--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -3,10 +3,14 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
 }
 .info-contain h2 {
     color: #49A37B;
     font-size: 30px;
     font-weight: 700;
+}
+
+img{
+    max-width: 50%;
+    height: auto;
 }
