--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -9,6 +9,10 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     font-weight: 700;
     color: #373867;    
 }
+img {
+    border: 0.7px solid #373867;
+    border-radius: 13px;
+}
 .main p {
     font-family: 'Roboto';
     font-weight: 400;
@@ -28,9 +32,17 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     nav{
         display: flex;
     }
+    /*img {
+        flex-basis: 500px;
+        height: 300px;;
+    }*/
 }
 @media (min-width: 480px) {
     h1 {
         font-size: 50px;
     }
+    /*img {
+        flex-basis: 300px;
+        height: 100px;
+    }*/
 }
