--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -1,30 +1,26 @@
 body {
     font-family: 'Roboto';
 }
-h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
-    padding-bottom: 3%;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-color:#373867;
-    font-weight: 700;
-    color: #373867;    
+h1 {
+    margin-left: 4%;
+    margin-right: 4%;  
 }
 img {
     border: 0.7px solid #373867;
     border-radius: 13px;
 }
-.main p {
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-    text-align: justify;
-    color: #373867CC;
+h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
+    width: 100%;
+    padding-bottom: 3%;
+    margin-bottom: 3%;
+    margin-top: 4%;
+    border-bottom-style: solid;
+    border-width: 3px;
+    border-color:#373867;
+    font-weight: 700;
+    text-align: center;
+    color: #373867;    
 }
-.features-content h2, .why-trackgenix h2, .contact-us h2 {
-    font-size: 30px;
-}
-
 @media (min-width: 1024px) {
     h1 {
         font-size: 70px;
@@ -32,17 +28,9 @@ img {
     nav{
         display: flex;
     }
-    /*img {
-        flex-basis: 500px;
-        height: 300px;;
-    }*/
 }
 @media (min-width: 480px) {
     h1 {
         font-size: 50px;
     }
-    /*img {
-        flex-basis: 300px;
-        height: 100px;
-    }*/
 }
