BaSP-W04-2022: Buttons were designed

--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -38,6 +38,9 @@
     justify-content: center;
     align-items: center;
 }
+.first-image {
+    margin-bottom: 3%;
+}
 .info-contain img {
     max-width: 55%;
 }
