--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -9,6 +9,26 @@ img {
     border: 0.7px solid #373867;
     border-radius: 13px;
 }
+a  {
+    text-decoration: none;
+}
+.main button {
+    display: flex;
+    margin-left: 15%;
+    margin-bottom: 2%;
+    padding-top: 1%;
+    height: auto;
+    background-color: #AACE9B;
+    border: 0px;
+    border-radius: 5px;
+}
+.main button a {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    size: 12px;
+    color: #373867;
+}
 h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     width: 100%;
     padding-bottom: 3%;
@@ -25,6 +45,9 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     h1 {
         font-size: 70px;
     }
+    .main button a {
+        font-size: 12px;
+    }
     nav{
         display: flex;
     }
@@ -32,5 +55,8 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
 @media (min-width: 480px) {
     h1 {
         font-size: 50px;
+    }
+    .main button a {
+        font-size: 9px;
     }
 }
