--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -7,6 +7,9 @@
     line-height: 22px;
     color: #373867CC;
 }
+.info-contain img {
+    max-width: 55%;
+}
 .info-contain p  {
     margin-left: 15%;
     margin-right: 15%;
@@ -27,25 +30,24 @@
     font-weight: 700;
     text-align: center;
 }
+.info-right, .info-left, .content-right-one, .content-left-two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .features-content h2, .why-trackgenix h2, .contact-us h2 {
     margin-right: 20%;
     margin-left: 20%;
     text-transform: uppercase;
     font-size: 30px;
 }
-.first-image, .second-image {
+.features-content p {
+    margin-left: 14%;
+    margin-right: 14%;
+}
+.features-content p, .why-trackgenix p {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.first-image {
-    margin-bottom: 3%;
-}
-.info-contain img {
-    max-width: 55%;
-}
-.why-trackgenix img {
-    max-width: 40%;
+    text-align: justify;
 }
 .info-contain img, .why-trackgenix img {
     margin: auto;
@@ -53,7 +55,53 @@
     align-items: center;
     height: auto;
 }
+.features-content ul {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3%;
+    margin-left: 14.5%;
+    margin-right: 13%;
+}
+.features-content ul li {
+    font-weight: 400;
+    list-style: disc;
+    color: #373867
+}
+.item {
+    font-weight: 700;
+    line-height: 28px;
+    color: #373867
+}
+.first-image {
+    margin-bottom: 3%;
+}
+.why-trackgenix h3, .image-left-one, .image-right-two, .first-image, .second-image {
+    display: flex;
+    justify-content: center;
+}
+.image-right-two, .image-left-one {
+    margin-bottom: 3%;
+}
+.why-trackgenix img {
+    max-width: 50%;
+}
+.why-trackgenix p {
+    margin-left: 25%;
+    margin-right: 25%;
+}
+.content-right-one, .content-left-two {
+    margin-bottom: 3%;
+    border-bottom-style: solid;
+    border-width: 0.8px;
+    border-color: #373867;
+}
 
+.contact-form{
+    display: flex;
+    flex-direction: column;
+  
 
+    border: 1px solid black;
+}
 
 
