--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -12,11 +12,16 @@ img {
 a  {
     text-decoration: none;
 }
+h3 {
+    margin-bottom: 2%;
+    font-weight: 700;
+    font-size: 16px;
+    color: #373867
+}
 .main button {
     display: flex;
-    margin-left: 15%;
     margin-bottom: 2%;
-    padding-top: 1%;
+    padding: 1%;
     height: auto;
     background-color: #AACE9B;
     border: 0px;
@@ -42,14 +47,20 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     color: #373867;    
 }
 @media (min-width: 1024px) {
+    nav{
+        display: flex;
+    }
     h1 {
         font-size: 70px;
     }
     .main button a {
         font-size: 12px;
     }
-    nav{
-        display: flex;
+    .features-content ul li {
+        font-size: 18px;
+    }
+    .item {
+        font-size: 24px;
     }
 }
 @media (min-width: 480px) {
@@ -58,5 +69,8 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     }
     .main button a {
         font-size: 9px;
+    }
+    .features-content ul li {
+        font-size: 14px;
     }
 }
