--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -99,14 +99,54 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    
-  
-
     border: 1px solid black;
 }
 .contact-form label, .contact-form input, .contact-form textarea, .contact-form select  {
     margin-bottom: 2%;
     margin-left: 14%;
     margin-right: 14%; 
+}
+.contact-form label, .contact-form input,  .contact-form select {
+    padding: 1%;
+}
+.contact-form textarea {
+    margin-top: 2%;
+    padding-bottom: 10%;
+}
+.contact-form input, .contact-form select, .contact-form textarea {
+    border: 1px solid #373867;
+    border-radius: 4px;
+    font-weight: 400;
+}
+.buttons-contact {
+    
+    display: flex;
+    margin-left: 14%;
+    margin-right: 16%;
+    margin-top: 4%; 
+    margin-bottom: 5%;
+    /*justify-content: space-around;*/
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.contact-send input, .contact-reset input {
+  margin: auto;
+  height: 100%;
+  border: none;
+  border-radius:5px;
+  font-weight: 500;
+  font-size: 13px;
+  color: #373867CC;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+.contact-send input {
+    background-color: #AACE9B;
+}
+.contact-reset input {
+    background-color:#DADADA;
 }
 
