--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -22,6 +22,12 @@ label {
     font-weight: 500;
     color: #373867;
 }
+h4  {
+    font-weight: 700;
+  
+    line-height: 18px;
+    color: #FFFFFF;
+  } 
 .main button {
     display: flex;
     margin-bottom: 2%;
@@ -50,6 +56,7 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     text-align: center;
     color: #373867;    
 }
+
 @media (min-width: 1024px) {
     nav{
         display: flex;
@@ -59,6 +66,9 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     }
     label {
         font-size: 14px;
+    }
+    h4 {
+        font-size: 15px;
     }
     .main button a {
         font-size: 12px;
@@ -75,6 +85,9 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
         font-size: 50px;
     }
     label {
+        font-size: 12px;
+    }
+    h4 {
         font-size: 12px;
     }
     .main button a {
