--- a/Semana-04/css/header.css
+++ b/Semana-04/css/header.css
@@ -1,5 +1,6 @@
 header {
     display: flex;
+    flex-grow: 1;
     justify-content: center;
     align-content: center;
     border: 1px black solid;
