--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -1,4 +1,8 @@
+.main {
 
+border: 1px solid black;
+
+}
 .main p {
     display: flex;
     font-family: 'Roboto';
@@ -125,8 +129,8 @@
     margin-right: 16%;
     margin-top: 4%; 
     margin-bottom: 5%;
-    /*justify-content: space-around;*/
-    justify-content: space-between;
+    justify-content: space-around;
+    /*justify-content: space-between;*/
     border: 1px solid black;
 }
 
