--- a/Semana-04/css/sidebar.css
+++ b/Semana-04/css/sidebar.css
@@ -1,7 +1,14 @@
 nav{
     display: none;
+    flex-direction: column;
+    flex-basis: 20%;
+    justify-content: flex-start;
+    
+    height: 100%;
     background-color: #B1B2B6;
     opacity: 0.9;
-    justify-content: center;
+    
+    
+    border: 1px solid black;
 
 }
