--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -3,7 +3,7 @@ body {
 }
 h1 {
     margin-left: 4%;
-    margin-right: 4%;  
+    margin-right: 4%;
 }
 img {
     border: 0.7px solid #373867;
@@ -24,10 +24,9 @@ label {
 }
 h4  {
     font-weight: 700;
-  
     line-height: 18px;
     color: #FFFFFF;
-  } 
+  }
 .main button {
     display: flex;
     margin-bottom: 2%;
@@ -54,15 +53,25 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     border-color:#373867;
     font-weight: 700;
     text-align: center;
-    color: #373867;    
+    color: #373867;
 }
 
 @media (min-width: 1024px) {
+    .content{
+        display: flex;
+        flex-direction: row;
+    }
+    .header-position{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+    }
     nav{
         display: flex;
     }
     h1 {
         font-size: 70px;
+        text-align: left;
     }
     label {
         font-size: 14px;
@@ -70,6 +79,7 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     h4 {
         font-size: 15px;
     }
+
     .main button a {
         font-size: 12px;
     }
