--- a/Semana-04/css/sidebar.css
+++ b/Semana-04/css/sidebar.css
@@ -3,12 +3,99 @@ nav{
     flex-direction: column;
     flex-basis: 20%;
     justify-content: flex-start;
-    
     height: 100%;
     background-color: #B1B2B6;
     opacity: 0.9;
-    
-    
     border: 1px solid black;
-
 }
+
+.container-search  {
+    display: flex;
+    padding-top: 8%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+  .container-search input   {
+    border: none;
+    border-radius: 3px;
+    font-size: 10pt;
+
+  }
+  .container-search .icon  {
+    margin-left: -20%;
+    margin-top: 1%;
+    top: 50%;
+    color: #B1B2B6;
+  }
+  .container-search button  {
+    border: 0px;
+    background-color: #FFFFFF;
+    width: 5%;
+  }
+
+  .account-buttons{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  .account-buttons a{
+    color: #FFFFFF;
+  }
+.buttons-account{
+    width: 40%;
+    border: none;
+    border-radius: 3px;
+}
+
+  #log-in  {
+    background-color: #49A37B;
+  }
+  #sign-up  {
+    background-color: #373867;
+  }
+
+  .menu  {
+    margin-top: 10%;
+    padding-bottom: 2%;
+    border-bottom: solid;
+    border-width: 1.5;
+    border-color: #49A37B;
+    margin-left: 8%;
+    margin-right: 8%;
+    /* padding-left: 4%;
+    padding-right: 4%; */
+    /* font-family: 'Roboto';
+    font-style: normal;
+    font-size: 15px;
+    font-weight: 400; */
+    color: #373867;
+  }
+  .sub-menu  {
+    margin-top: 4%;
+    margin-left: 8%;
+    margin-right: 8%;
+  }
+  .sub-menu li  {
+    margin-top: 1%;
+  }
+  .sub-menu li a  {
+    /* font-family: 'Roboto';
+    font-style: normal;
+    font-size: 15px; */
+    color: #373867;
+  }
+  .get-in-touch  {
+    margin-top: 30%;
+  }
+  .more-data li  {
+    /* margin-top: 12px;
+    font-style: normal;
+    font-size: 15px;
+    font-family: 'Roboto';
+    font-weight: 400; */
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-top: 4%;
+    color: #373867;
+  }
