--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -61,11 +61,6 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
         display: flex;
         flex-direction: row;
     }
-    .header-position{
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-end;
-    }
     nav{
         display: flex;
     }
@@ -79,16 +74,63 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     h4 {
         font-size: 15px;
     }
-
+    .features-content h2, .why-trackgenix h2, .contact-us h2 {
+        text-align: left;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
     .main button a {
         font-size: 12px;
     }
+    .first-contain {
+        display: flex;
+        flex: row;
+    }
+
+    .info-left{
+        max-width: 50%;
+    }
+    .info-contain img {
+        max-width: 90%;
+    }
+    .info-contain p {
+        text-align: justify;
+    }
+    .second-contain {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    .info-right{
+        max-width: 50%;
+    }
+
     .features-content ul li {
         font-size: 18px;
     }
     .item {
         font-size: 24px;
     }
+
+    .contain-one{
+        display: flex;
+    }
+    .contain-one div{
+        max-width: 50%;
+    }
+    .contain-one img{
+        max-width: 90%;
+    }
+    .image-right-two{
+        order: 2;
+    }
+    .content-left-two{
+        order: 1;
+    }
+
+.contact-form{
+    justify-content: left;
+}
+
 }
 @media (min-width: 480px) {
     h1 {
@@ -103,6 +145,7 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     .main button a {
         font-size: 9px;
     }
+    
     .features-content ul li {
         font-size: 14px;
     }
