--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -1,7 +1,5 @@
 .main {
-
 border: 1px solid black;
-
 }
 .main p {
     display: flex;
@@ -10,6 +8,15 @@ border: 1px solid black;
     font-size: 16px;
     line-height: 22px;
     color: #373867CC;
+}
+
+.first-contain {
+    display: flex;
+    flex-direction: column;
+}
+.second-contain {
+    display: flex;
+    flex-direction: column;
 }
 .info-contain img {
     max-width: 55%;
