--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -92,13 +92,11 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
         text-align: justify;
     }
     .second-contain {
-        /*display: flex;*/
         flex-direction: row-reverse;
     }
     .info-right{
         max-width: 50%;
     }
-
     .features-content ul li {
         font-size: 18px;
     }
@@ -106,26 +104,41 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
         font-size: 24px;
     }
 
-    .contain-one{
+    .contain-one {
         display: flex;
     }
-    .contain-one div{
+    .contain-one div {
         max-width: 50%;
     }
-    .contain-one img{
+    .contain-one img {
         max-width: 90%;
     }
-    .image-right-two{
+    .image-right-two {
         order: 2;
     }
-    .content-left-two{
+    .content-left-two {
         order: 1;
     }
-
-.contact-form{
-    justify-content: left;
+    .contact-form {
+        justify-content: left;
+    }
 }
-
+@media (min-width: 1024px) {
+    h1 {
+        font-size: 60px;
+    }
+    label {
+        font-size: 13px;
+    }
+    h4 {
+        font-size: 13px;
+    }
+    .main button a {
+        font-size: 10px;
+    }
+    .features-content ul li {
+        font-size: 16px;
+    }
 }
 @media (min-width: 480px) {
     h1 {
@@ -140,7 +153,6 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     .main button a {
         font-size: 9px;
     }
-    
     .features-content ul li {
         font-size: 14px;
     }
