--- a/Semana-04/css/header.css
+++ b/Semana-04/css/header.css
@@ -1,6 +1,6 @@
 header {
-    display: flex;
-    flex-grow: 1;
-    justify-content: center;
-    align-content: center;
+    text-align: center;
+    padding-right: 3%;
+    padding-left: 5%;
+    margin-right: 7%;
 }
