--- a/Semana-04/css/sidebar.css
+++ b/Semana-04/css/sidebar.css
@@ -15,6 +15,7 @@ nav {
   padding-right: 4%;
 }
 .container-search input {
+  width: 95%;
   border: none;
   border-radius: 3px;
   font-size: 10pt;
@@ -41,6 +42,7 @@ nav {
 }
 .buttons-account {
   width: 40%;
+  padding: 2%;
   border: none;
   border-radius: 3px;
 }
