--- a/Semana-06/views/index.html
+++ b/Semana-06/views/index.html
@@ -4,13 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/header.css">
-        <link rel="stylesheet" href="./css/landing.css">
-        <link rel="stylesheet" href="./css/sidebar.css">
-        <link rel="stylesheet" href="./css/footer.css">
-        <link rel="stylesheet" href="./css/styles.css">
-        <link rel="stylesheet" href="./css/login.css">
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/header.css">
+        <link rel="stylesheet" href="../css/landing.css">
+        <link rel="stylesheet" href="../css/sidebar.css">
+        <link rel="stylesheet" href="../css/footer.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap"
@@ -40,7 +39,7 @@
                     <a href="./login.html"> Log in </a>
                 </button>
                 <button class="buttons-account" id="sign-up">
-                    <a href="#"> Sign up </a>
+                    <a href="./employee-signup.html"> Sign up </a>
                 </button>
             </div>
             <p class="menu"> Menu </p>
@@ -78,7 +77,7 @@
                         </p>
                     </div>
                     <div class="first-image">
-                        <img src="img/content-image-one.png">
+                        <img src="../img/content-image-one.png">
                     </div>
                 </div>
                 <div class="second-contain">
@@ -94,7 +93,7 @@
                         </button>
                     </div>
                     <div class="second-image">
-                        <img src="img/content-image-two.jpg">
+                        <img src="../img/content-image-two.jpg">
                     </div>
                 </div>
             </section>
@@ -131,7 +130,7 @@
                 <h2>Why Trackgenix?</h2>
                 <div class="contain-one">
                     <div class="image-left-one">
-                        <img src="img/content-image-three.png">
+                        <img src="../img/content-image-three.png">
                     </div>
                     <div class="content-right-one">
                         <h3 class="subheader">Subheader</h3>
@@ -146,7 +145,7 @@
                 </div>
                 <div class="contain-one">
                     <div class="image-right-two">
-                        <img src="img/content-image-four.jpg">
+                        <img src="../img/content-image-four.jpg">
                     </div>
                     <div class="content-left-two">
                         <h3 class="subheader">Subheader</h3>
@@ -161,7 +160,7 @@
                 </div>
                 <div class="contain-one">
                     <div class="image-left-one">
-                        <img src="img/content-image-five.jpg">
+                        <img src="../img/content-image-five.jpg">
                     </div>
                     <div class="content-right-one">
                         <h3 class="subheader">Subheader</h3>
@@ -176,7 +175,7 @@
                 </div>
                 <div class="contain-one">
                     <div class="image-right-two">
-                        <img src="img/content-image-six.jpg">
+                        <img src="../img/content-image-six.jpg">
                     </div>
                     <div class="content-left-two">
                         <h3 class="subheader">Subheader</h3>
@@ -276,27 +275,27 @@
             <div class="social-media">
                 <button>
                     <a href="https://twitter.com/">
-                        <img src="img/twitter-footer.png" id="social">
+                        <img src="../img/twitter-footer.png" id="social">
                     </a>
                 </button>
                 <button>
                     <a href="https://www.linkedin.com/">
-                        <img src="img/linkedin-footer.png">
+                        <img src="../img/linkedin-footer.png">
                     </a>
                 </button>
                 <button>
                     <a href="https://github.com/">
-                        <img src="img/github-footer.png">
+                        <img src="../img/github-footer.png">
                     </a>
                 </button>
                 <button>
                     <a href="https://www.instagram.com/">
-                        <img src="img/instagram-footer.png">
+                        <img src="../img/instagram-footer.png">
                     </a>
                 </button>
                 <button>
                     <a href="https://www.facebook.com/">
-                        <img src="img/facebook-footer.png">
+                        <img src="../img/facebook-footer.png">
                     </a>
                 </button>
             </div>
