--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/sidebar.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap"
     rel="stylesheet">
+    <script src="./javascript/login.js" type="text/javascript"></script>
     <title>Log-in</title>
 </head>
 <body>
@@ -64,17 +65,23 @@
     </nav>
     <form class="sign-in">
         <p>Sign In</p>
-        <label>E-mail</label>
-        <input type="text" placeholder="Enter e-mail">
-        <label>Password</label>
-        <input type="password" placeholder="Enter Password">
-        <button type="submit">Login</button>
-        <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
-        <span>Forgot 
-            <a href="#">password?</a>
-        </span>
+        <div class="log-in-content"> 
+            <label>E-mail</label>
+            <input id="email" name="email" type="text" placeholder="Enter e-mail" >
+            <span id="wrong-email"></span>
+            <label>Password</label>
+            <input id="password" type="password" placeholder="Enter Password">
+            <span id="wrong-password"></span>
+            <div class="remember-me">
+            <label>
+                <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
+            </div>
+            <button id="send" type="submit" >Login</button>
+            <span>
+                <a href="#">Forgot password?</a>
+            </span>
+        </div>
     </form>
     <footer>
         <div class="footer-title">
