BaSP-W06-2022: Finishing some validations and corrections in the README

--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -143,27 +143,27 @@
         <div class="social-media">
             <button>
                 <a href="https://twitter.com/">
-                    <img src="img/twitter-footer.png" id="social">
+                    <img src="../img/twitter-footer.png" id="social">
                 </a>
             </button>
             <button>
                 <a href="https://www.linkedin.com/">
-                    <img src="img/linkedin-footer.png">
+                    <img src="../img/linkedin-footer.png">
                 </a>
             </button>
             <button>
                 <a href="https://github.com/">
-                    <img src="img/github-footer.png">
+                    <img src="../img/github-footer.png">
                 </a>
             </button>
             <button>
                 <a href="https://www.instagram.com/">
-                    <img src="img/instagram-footer.png">
+                    <img src="../img/instagram-footer.png">
                 </a>
             </button>
             <button>
                 <a href="https://www.facebook.com/">
-                    <img src="img/facebook-footer.png">
+                    <img src="../img/facebook-footer.png">
                 </a>
             </button>
         </div>
