--- a/Semana-06/css/login.css
+++ b/Semana-06/css/login.css
@@ -24,6 +24,7 @@
     padding-top: 4%;
     padding-bottom: 4%;
     padding-left: 2%;
+    border: 1px solid #373867CC;
 }
 .remember-me {
     margin-top: 8%;
@@ -38,7 +39,13 @@
     border: none;
     border-radius: 5px;
     background-color: #AACE9B;
+    font-weight: 500;
+    font-size: 13px;
     color: #373867CC;
+}
+.wrong-message{
+    font-size: 12px;
+    color: #F13312;
 }
 .sign-in span a { 
     font-size: 12px;
