--- a/Semana-06/css/styles.css
+++ b/Semana-06/css/styles.css
@@ -146,6 +146,14 @@ h1, .features-content h2, .why-trackgenix h2, .contact-us h2 {
     .log-in-content label {
         font-size: 16px;
     }
+  
+    .inputs-labels{
+        display: flex;
+        flex-direction: row;
+    }
+    .input-field{
+        margin-right: 10%;
+    }
     .footer-title {
         display: flex;
     }
