--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap"
     rel="stylesheet">
-    <script src="./javascript/login.js" type="text/javascript"></script>
+    <script src="../javascript/login.js" type="text/javascript"></script>
     <title>Log-in</title>
 </head>
 <body>
@@ -68,10 +68,10 @@
         <div class="log-in-content"> 
             <label>E-mail</label>
             <input id="email" name="email" type="text" placeholder="Enter e-mail" >
-            <span id="wrong-email"></span>
+            <span id="wrong-email" class="wrong-message"></span>
             <label>Password</label>
             <input id="password" type="password" placeholder="Enter Password">
-            <span id="wrong-password"></span>
+            <span id="wrong-password" class="wrong-message"></span>
             <div class="remember-me">
             <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
