BaSP-W06-2022: Details of the links in HTML

--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -35,7 +35,7 @@
         </form>
         <div class="account-buttons">
             <button class="buttons-account" id="log-in">
-                <a href="#"> Log in </a>
+                <a href="./login.html"> Log in </a>
             </button>
             <button class="buttons-account" id="sign-up">
                 <a href="#"> Sign up </a>
@@ -44,7 +44,7 @@
         <p class="menu"> Menu </p>
         <ul class="sub-menu">
             <li>
-                <a href="#homepage">Homepage</a>
+                <a href="./index.html">Homepage</a>
             </li>
             <li>
                 <a href="#features">Features</a>
