--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -37,13 +37,13 @@
                 <a href="#"> Log in </a>
             </button>
             <button class="buttons-account" id="sign-up">
-                <a href="#"> Sign up </a>
+                <a href="./employee-signup.html"> Sign up </a>
             </button>
         </div>
         <p class="menu"> Menu </p>
         <ul class="sub-menu">
             <li>
-                <a href="#homepage">Homepage</a>
+                <a href="./index.html">Homepage</a>
             </li>
             <li>
                 <a href="#features">Features</a>
